ARM/Networking/Site1/af_vnet_azuredeploy1_prodB.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {

    "commentLocation": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters for the deployment template filter on VNET102"
    },
    "commentVNET": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from VNET tab, filter on VNET102"
    },
    "commentSubnet": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from subnet tab, filter on VNET102"
    },
    "commentConnections": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from Connection tab, filter on VNET102"
    },
    "commentGateway": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from Gateway tab, filter on VNET102"
    },


    "baseUrl": {
      "defaultValue": "https://github.com/willstg/AzureFoundation/tree/master/arm/vnet/site1",
      "type": "string",
      "metadata": {
        "artifactsBaseUrl": "",
        "description": "URL to acquire other templates"
      }
    },

    /*
    Using the metadata spreadsheet, the VNET tab, filter results on VNET100
    Select the columnns that contain the word template and are color coded accordingly.
    */
    "locationName": {
      "type": "string",
      "defaultValue": "westcentralus"
    },
    "ResourceGroupName": {
      "type": "string",
      "defaultValue": "rg_rg_vnet_prod_w1"
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "vnet_prod_w1",
      "metadata": { "description": "AzureFoundation VNET Name for virtual data center subscription in a specific data center." }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.128.0.0/20",
      "metadata": { "description": "AzureFoundation VNET Address Prefix, the range of addresses for a specific data center." }
    },
    "dnsServers": {
      "type": "array",
      "defaultValue": [ "10.128.59.36" ],
      "metadata": { "description": "AzureFoundation Domain Controller DNS server" }
    },


    /*
    Using the metadata spreadsheet, the connection tab, filter results on VNET100, 
    Select the columnns that contain the word template and are color coded accordingly.
    */
    "subnet110Prefix": {
      "type": "string",
      "defaultValue": "10.128.2.0/24",
      "metadata": { "description": "HTTP and HTTPS services" }
    },
    "subnet110Name": {
      "type": "string",
      "defaultValue": "s110_Web_prod_slgmac_W1",
      "metadata": { "description": "HTTP and HTTPS services" }
    },
    "subnet110NSG": {
      "type": "string",
      "defaultValue": "110_NSG_Web",
      "metadata": { "description": "NSG: HTTP and HTTPS services" }
    },
    "subnet115Prefix": {
      "type": "string",
      "defaultValue": "10.128.3.0/24",
      "metadata": { "description": "Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet115Name": {
      "type": "string",
      "defaultValue": "s115_LB_Web_prod_slgmac_W1",
      "metadata": { "description": "Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet115NSG": {
      "type": "string",
      "defaultValue": "115_NSG_LB_Web",
      "metadata": { "description": "NSG: Loadbalanced HTTP and HTTPS Services" }
    },
    "subnet120Prefix": {
      "type": "string",
      "defaultValue": "10.128.4.0/24",
      "metadata": { "description": "Web Services, OEM applications" }
    },
    "subnet120Name": {
      "type": "string",
      "defaultValue": "s120_App_prod_slgmac_W1",
      "metadata": { "description": "Web Services, OEM applications" }
    },
    "subnet120NSG": {
      "type": "string",
      "defaultValue": "120_NSG_App",
      "metadata": { "description": "NSG: Web Services, OEM applications" }
    },
    "subnet125Prefix": {
      "type": "string",
      "defaultValue": "10.128.5.0/24",
      "metadata": { "description": "Loadbalaned Web Services, OEM applications" }
    },
    "subnet125Name": {
      "type": "string",
      "defaultValue": "s125_LB_App_prod_slgmac_W1",
      "metadata": { "description": "Loadbalaned Web Services, OEM applications" }
    },
    "subnet125NSG": {
      "type": "string",
      "defaultValue": "125_NSG_LB_App",
      "metadata": { "description": "NSG: Loadbalaned Web Services, OEM applications" }
    },
    "subnet130Prefix": {
      "type": "string",
      "defaultValue": "10.128.6.0/24",
      "metadata": { "description": "Data for Applications" }
    },
    "subnet130Name": {
      "type": "string",
      "defaultValue": "s130_DB_prod_slgmac_W1",
      "metadata": { "description": "Data for Applications" }
    },
    "subnet130NSG": {
      "type": "string",
      "defaultValue": "130_NSG_DB",
      "metadata": { "description": "NSG: Data for Applications" }
    },
    "subnet135Prefix": {
      "type": "string",
      "defaultValue": "10.128.7.0/24",
      "metadata": { "description": "Loadbalanced Databases" }
    },
    "subnet135Name": {
      "type": "string",
      "defaultValue": "s135_LB_DB_prod_slgmac_W1",
      "metadata": { "description": "Loadbalanced Databases" }
    },
    "subnet135NSG": {
      "type": "string",
      "defaultValue": "135_NSG_LB_DB",
      "metadata": { "description": "NSG: Loadbalanced Databases" }
    },
    "subnet150Prefix": {
      "type": "string",
      "defaultValue": "10.128.8.0/24",
      "metadata": { "description": "Internet EndPoint Machines" }
    },
    "subnet150Name": {
      "type": "string",
      "defaultValue": "s150_DMZ_prod_slgmac_W1",
      "metadata": { "description": "Internet EndPoint Machines" }
    },
    "subnet150NSG": {
      "type": "string",
      "defaultValue": "150_NSG_DMZ",
      "metadata": { "description": "NSG: Internet EndPoint Machines" }
    },
    "subnet155Prefix": {
      "type": "string",
      "defaultValue": "10.128.9.0/24",
      "metadata": { "description": "Loadbalaned Internet Endpoint systems" }
    },
    "subnet155Name": {
      "type": "string",
      "defaultValue": "s155_LB_DMZ_prod_slgmac_W1",
      "metadata": { "description": "Loadbalaned Internet Endpoint systems" }
    },
    "subnet155NSG": {
      "type": "string",
      "defaultValue": "155_NSG_LB_DMZ",
      "metadata": { "description": "NSG: Loadbalaned Internet Endpoint systems" }
    },
    "subnet160Prefix": {
      "type": "string",
      "defaultValue": "10.128.10.0/25",
      "metadata": { "description": "Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet160Name": {
      "type": "string",
      "defaultValue": "s160_User_Tier0_prod_slgmac_W1",
      "metadata": { "description": "Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet160NSG": {
      "type": "string",
      "defaultValue": "160_NSG_User_Tier0",
      "metadata": { "description": "NSG: Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other" }
    },
    "subnet161Prefix": {
      "type": "string",
      "defaultValue": "10.128.10.128/25",
      "metadata": { "description": "Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet161Name": {
      "type": "string",
      "defaultValue": "s161_User_Tier1_prod_slgmac_W1",
      "metadata": { "description": "Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet161NSG": {
      "type": "string",
      "defaultValue": "161_NSG_User_Tier1",
      "metadata": { "description": "NSG: Tier 1 administrator - manage enterprise servers, services, and applications" }
    },
    "subnet162Prefix": {
      "type": "string",
      "defaultValue": "10.128.11.0/25",
      "metadata": { "description": "Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },
    "subnet162Name": {
      "type": "string",
      "defaultValue": "s162_User_Tier2_prod_slgmac_W1",
      "metadata": { "description": "Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },
    "subnet162NSG": {
      "type": "string",
      "defaultValue": "162_NSG_User_Tier2",
      "metadata": { "description": "NSG: Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },

    /*
    Using the metadata spreadsheet, the connection tab, filter results on VNET100, 
    Select the columnns that contain the word template and are color coded accordingly.
    */
    "ConnectionNamecnct100": {
      "type": "string",
      "defaultValue": "Peering_mac_slg_Prod_To_Services_W1",
      "metadata": { "description": "Arbitrary name for the new connection between an Azure VNet and another network" }
    },
    "vnetNamecnct100": {
      "type": "string",
      "defaultValue": "vnet_prod_w1",
      "metadata": { "description": "Azure VNET of the current location" }
    },
    "connectionType1cnct100": {
      "type": "string",
      "defaultValue": "Peering",
      "metadata": { "description": "The type of connection. For connecting to ExpressRoute circuits, the connectionType must be of type ExpressRoute. Other types are IPsec and Vnet2Vnet." }
    },
    "allowVNETAccesscnct100": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "allowFwdAccesscnct100": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "allowGWAccesscnct100": {
      "type": "bool",
      "defaultValue": false,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "useRemoteGatewaycnct100": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "peerVNETNamecnct100": {
      "type": "string",
      "defaultValue": "vnet_services_w1",
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "rmtSubIDcnct100": {
      "type": "string",
      "defaultValue": "730f26b5-ebf5-4518-999f-0b4eb0cdc8f9",
      "metadata": { "description": "The subscription ID of the peer VNET." }
    },
    "rmtRGNamecnct100": {
      "type": "string",
      "defaultValue": "rg_vnet_services_w1",
      "metadata": { "description": "The resource group for the remote subscription VNET." }
    },
    "rmtConnectionNamecnct100": {
      "type": "string",
      "defaultValue": "",
      "metadata": { "description": "The name of the remote connection." }
    },
    "rmtLocationcnct100": {
      "type": "string",
      "defaultValue": "westcentralus",
      "metadata": { "description": "The name of the remote location." }
    }
  },

  "variables": {
    "apiVersion": "2015-06-15",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
  },

  "resources": [
    /*useing the Metadata spreadsheet goto the NSGRules tab and filter on VNET100
    and take the columns grouped for Templates */

    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet110NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "110_NSG_Web_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet115NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "115_NSG_LB_Web_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet120NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "120_NSG_App_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet125NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "125_NSG_LB_App_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          },
          {
            "name": "http.Inbound.Allow",
            "properties": {
              "description": "http.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2001,
              "direction": "Inbound"
            }
          },
          {
            "name": "https.Inbound.Allow",
            "properties": {
              "description": "https.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2002,
              "direction": "Inbound"
            }
          },
          {
            "name": "TCP8080.Inbound.Allow",
            "properties": {
              "description": "TCP8080.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2003,
              "direction": "Inbound"
            }
          },
          {
            "name": "TCP19080.Inbound.Allow",
            "properties": {
              "description": "TCP19080.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "19080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3900,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFCluster.Inbound.Allow",
            "properties": {
              "description": "SFCluster.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "19000",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3910,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFClusterRange.Inbound.Allow",
            "properties": {
              "description": "SFClusterRange.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "1025-1027",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3920,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFEpehemalRange.Inbound.Allow",
            "properties": {
              "description": "SFEpehemalRange.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "49125-65534",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3930,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFApplication.Inbound.Allow",
            "properties": {
              "description": "SFApplication.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "20000-30000",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3940,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFSMB.Inbound.Allow",
            "properties": {
              "description": "SFSMB.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3950,
              "direction": "Inbound"
            }
          },
          {
            "name": "SFRDP.Inbound.Allow",
            "properties": {
              "description": "SFRDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389-4500",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 3960,
              "direction": "Inbound"
            }
          },
          {
            "name": "BlockAll.Inbound.Deny",
            "properties": {
              "description": "BlockAll.Inbound.Deny",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4095,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet130NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "130_NSG_DB_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet135NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "135_NSG_LB_DB_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet150NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "150_NSG_DMZ_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet155NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "155_NSG_LB_DMZ_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet160NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "160_NSG_User_Tier0_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet161NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "161_NSG_User_Tier1_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet162NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "162_NSG_User_Tier2_W1" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },




    /*
    Use the metadata spreadsheet and the Subnet tab to filer on the VNET104, 
    Copy the Resources below that are grouped in a different color.
    */
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('vnetName')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "AzureFoundation VNet Definition" },
      "properties": {
        "addressSpace": { "addressPrefixes": [ "[parameters('vnetAddressPrefix')]" ] },
        "subnets": [
          {
            "name": "[parameters('subnet110name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet110prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet110NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet115name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet115prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet115NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet120name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet120prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet120NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet125name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet125prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet125NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet130name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet130prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet130NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet135name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet135prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet135NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet150name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet150prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet150NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet155name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet155prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet155NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet160name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet160prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet160NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet161name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet161prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet161NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet162name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet162prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet162NSG'))]" }
            }
          }
        ],

        "resources": [
          /*Go to the Connection tab of the Metadata spreadsheet and filter on VNET 100
          select the Resources for Peering and past them below*/
          {
            "apiVersion": "2016-06-01",
            "type": "virtualNetworkPeerings",
            "name": "[parameters('ConnectionNamecnct100')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [ "[concat('/subscriptions/', parameters('rmtSubIDcnct100'), '/resourceGroups/', parameters('rmtRGNamecnct100'),'/providers/Microsoft.Network/virtualNetworks/',parameters('peerVNETNamecnct100'))]", "[concat('Microsoft.Networks/virtualNetworks/',parameters('vnetNamecnct100'))]" ],
            "comments": "Make sure you put these resources within the Resources of a VNET, like a subnet",
            "properties": {
              "allowVirtualNetworkAccess": "[parameters('allowVNETAccesscnct100')]",
              "allowForwardedTraffic": "[parameters('allowFwdAccesscnct100')]",
              "allowGatewayTransit": "[parameters('allowGWAccesscnct100')]",
              "useRemoteGateways": "[parameters('allowVNETAccesscnct100')]",
              "remoteVirtualNetwork": { "id": "[concat('/subscriptions/', parameters('rmtSubIDcnct100'), '/resourceGroups/', parameters('rmtRGNamecnct100'),'/providers/Microsoft.Network/virtualNetworks/',parameters('peerVNETNamecnct100'))]" }
            }
          },


        ],
        "dhcpOptions": { "dnsServers": [ "10.128.59.36" ] },
        "dependsOn": [
          /*Using the metadata template on the Subnet Tab, filter to VNET104 and select
          the columns with DependsOn and grouped by color*/
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet110NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet115NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet120NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet125NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet130NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet135NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet150NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet155NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet160NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet161NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet162NSG'))]"

        ]

      }
    }
  ],
  "outputs": {
  }
}
